Fix text alignment

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -84,6 +84,7 @@
   bottom: 0;
   transform: translate(-50%, -50%);
   gap: 5px;
+  text-align: center;
 }
 
 .contact {
